--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 pip
 python-dotenv
 wheel
-dash
 flask
 gunicorn
+pandas
+numpy
+plotly
+plotly_express
+openpyxl
+dash
 dash-core-components
 dash-html-components
 dash-renderer
 dash_bootstrap_components
-pandas
-numpy
-plotly
-openpyxl
+vega_datasets
