--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   dashboard:
-    image: dashserver:latest
+    image: dashboarddemo:latest
     container_name: dashdemo1
     hostname: dashdemo1
     ports:
